src/objects/Queue__c.object
<CustomObject>
    <description>Responsavel por prover garantia de entrega para camada de integração</description>
    <fields>
        <fullName>EventName__c</fullName>
        <description>Event Name or Transaction Name</description>
        <label>Event Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExceptionStackTrace__c</fullName>
        <description>Used only for error messages, fill this field using getStackTraceString() method</description>
        <label>Exception Stack Trace</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ExternalCreationDate__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <description>External last modified date based on iDoc date (using the external system date/timezone) to ensure the integration between systems will keep the transactions sequence as they were triggered by the original System</description>
        <label>External Creation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>InternalId__c</fullName>
        <description>Internal ID from External system related to this event (used to identify original transaction from external system)</description>
        <externalId>true</externalId>
        <label>Internal ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsRetryDisabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identify if the retries should be executed for this event. If equal TRUE disable retries even if retry count is bigger than zero (can be used for errors as errors does not require retries)</description>
        <label>Is Retry Disable?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ObjectId__c</fullName>
        <description>Object ID (internal Sales Force Id) related to this event (used to retrieve information to create the transaction to the receiver Account)</description>
        <externalId>true</externalId>
        <label>ObjectId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payload__c</fullName>
        <description>Payload
(Valor do Objeto Corrente, para atribuir esta informação concatene o objeto a uma string e atribua este valor concatenado ao payload. Este Atributo podera ser utilizado no futuro para Determinar o estado do Evento Corrente dispensando o uso do RecordType QUEUED nos Objetos que necessitam gerenciamento de estado)</description>
        <label>Payload</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Receiver__c</fullName>
        <label>Receiver</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RetryCount__c</fullName>
        <defaultValue>10</defaultValue>
        <description>Identify the number of retries for this event</description>
        <label>Retry Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sender__c</fullName>
        <label>SenderAccount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StatusMessage__c</fullName>
        <description>Error Message from internal or external System</description>
        <label>Status Message</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DELIVERED</fullName>
                </value>
                <value>
                    <fullName>ERROR</fullName>
                </value>
                <value>
                    <fullName>QUEUED</fullName>
                </value>
                <value>
                    <fullName>SUCCESS</fullName>
                </value>
                <value>
                    <fullName>INVALID</fullName>
                </value>
                <value>
                    <fullName>DONE</fullName>
                </value>
                <value>
                    <fullName>PROCESSING</fullName>
                </value>
                <value>
                    <fullName>UNHANDLED</fullName>
                </value>
                <value>
                    <fullName>IGNORED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>businessDocumentCorrelatedNumber__c</fullName>
        <label>businessDocumentCorrelatedNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>businessDocument__c</fullName>
        <externalId>true</externalId>
        <label>businessDocumentNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>parentEvent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Correlated Event</description>
        <label>Parent Event</label>
        <referenceTo>Queue__c</referenceTo>
        <relationshipLabel>Correlateds</relationshipLabel>
        <relationshipName>correlateds</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>EventQueue</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>EventName__c</columns>
        <columns>Status__c</columns>
        <columns>businessDocument__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>businessDocumentCorrelatedNumber__c</columns>
        <columns>InternalId__c</columns>
        <columns>ObjectId__c</columns>
        <columns>StatusMessage__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AllToday</fullName>
        <columns>NAME</columns>
        <columns>EventName__c</columns>
        <columns>Status__c</columns>
        <columns>StatusMessage__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>businessDocument__c</columns>
        <columns>businessDocumentCorrelatedNumber__c</columns>
        <columns>RetryCount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Tudo - Hoje</label>
        <language>pt_BR</language>
    </listViews>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>QueueCode</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Queues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>